--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,20 @@
     </form>
   </div>
 </nav>
+<div class="container">
+  <div class="row">
+    <div class="col-lg">
+      One of three columns
+    </div>
+    <div class="col-lg">
+      One of three columns
+    </div>
+    <div class="col-lg col-5 bg-https://mdbootstrap.com/img/Photos/Others/architecture.jpg" >
+      One of three columns
+    </div>
+  </div>
+</div>
+<button  >renin</button>
 
 
 
